# zcore

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  mkdocs.yml
.github/scripts/: select_ci_scope.py
.github/workflows/: ci-analysis.yml  ci-platforms.yml  ci.yml  docs.yml  fuzz.yml
Docs/: Doxyfile.in
Docs/docs/: contracts.md  doxygen.md  failure-flow.md  include-policy.md  index.md  roadmap.md
Docs/docs/javascripts/: mermaid-init.js
Docs/docs/migration/: string_utf8_semantics.md
Docs/docs/stylesheets/: extra.css
Docs/docs/types/: aabb2.md  aabb3.md  abi_version.md  allocator.md  any.md  arena.md  array.md  atomic.md  borrow.md  borrow_mut.md  btree_map.md  btree_set.md  buffered_reader.md  buffered_writer.md  byte_buffer.md  clock.md  condition_variable.md  cpu_features.md  defer.md  deque.md  duration.md  endian.md  error.md  error_handler.md  error_info.md  extension_policy.md  fixed_bit_set.md  fixed_string.md  fixed_vector.md  flags.md  foundation.md  function.md  handle.md  hash.md  hash_map.md  hash_set.md  id.md  inline_buffer.md  inline_storage.md  instant.md  (+44 more)
benchmarks/: CMakeLists.txt  string_utf8_benchmark.cpp
cmake/: zcoreConfig.cmake.in  zcoreDocs.cmake
fuzz/: CMakeLists.txt  buffered_io_fuzz.cpp  hash_map_fuzz.cpp  string_fuzz.cpp  utf8_fuzz.cpp
include/zcore/: aabb2.hpp  aabb3.hpp  abi_version.hpp  allocator.hpp  any.hpp  arena.hpp  array.hpp  atomic.hpp  borrow.hpp  borrow_mut.hpp  btree_map.hpp  btree_set.hpp  buffered_reader.hpp  buffered_writer.hpp  byte_buffer.hpp  clock.hpp  condition_variable.hpp  contract_violation.hpp  cpu_features.hpp  defer.hpp  deque.hpp  duration.hpp  endian.hpp  error.hpp  error_handler.hpp  error_info.hpp  extension_policy.hpp  fixed_bit_set.hpp  fixed_string.hpp  fixed_vector.hpp  flags.hpp  foundation.hpp  function.hpp  handle.hpp  hash.hpp  hash_map.hpp  hash_set.hpp  id.hpp  inline_buffer.hpp  inline_storage.hpp  (+49 more)
include/zcore/abi/: abi_version.hpp  interface_id.hpp  load_result.hpp  plugin_descriptor.hpp
include/zcore/container/: array.hpp  btree_map.hpp  btree_set.hpp  deque.hpp  fixed_bit_set.hpp  fixed_string.hpp  fixed_vector.hpp  hash_map.hpp  hash_set.hpp  inline_buffer.hpp  inline_storage.hpp  non_null.hpp  slice.hpp  string.hpp  string_view.hpp  utf8.hpp  vector.hpp
include/zcore/diagnostic/: log_level.hpp  log_sink.hpp  trace_event.hpp  trace_sink.hpp
include/zcore/error/: contract_violation.hpp  error.hpp  error_handler.hpp  error_info.hpp  extension_policy.hpp  option.hpp  result.hpp  status.hpp
include/zcore/hash/: customization.hpp
include/zcore/hash/detail/: common.hpp  fnv1a64.hpp  siphash24.hpp  value_hash_primitives.hpp  xxh3_runtime.hpp  xxhash_backend.hpp
include/zcore/io/: buffered_reader.hpp  buffered_writer.hpp  byte_buffer.hpp  endian.hpp  io_error.hpp  reader.hpp  seeker.hpp  writer.hpp
include/zcore/math/: aabb2.hpp  aabb3.hpp  mat3.hpp  mat4.hpp  quat.hpp  transform3.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/zcore/memory/: allocator.hpp  arena.hpp  borrow.hpp  borrow_mut.hpp  owned.hpp  shared.hpp
include/zcore/thread/: atomic.hpp  condition_variable.hpp  mpsc_ring_buffer.hpp  mutex.hpp  rw_lock.hpp  spin_lock.hpp  spsc_ring_buffer.hpp  synchronized.hpp  thread.hpp  thread_bound.hpp  thread_id.hpp  thread_local.hpp
include/zcore/thread/detail/: ring_buffer_storage.hpp
include/zcore/time/: clock.hpp  duration.hpp  instant.hpp  sequence_number.hpp  timestamp.hpp
include/zcore/utility/: any.hpp  defer.hpp  function.hpp  scope_guard.hpp
tests/: CMakeLists.txt  abi_version_test.cpp  allocator_test.cpp  any_test.cpp  arena_test.cpp  array_test.cpp  atomic_test.cpp  borrow_mut_test.cpp  borrow_test.cpp  btree_map_test.cpp  btree_set_test.cpp  buffered_reader_test.cpp  buffered_writer_test.cpp  byte_buffer_test.cpp  clock_test.cpp  condition_variable_test.cpp  cpu_features_test.cpp  defer_test.cpp  deque_test.cpp  duration_test.cpp  endian_test.cpp  error_handler_test.cpp  error_info_test.cpp  error_result_status_test.cpp  extension_policy_test.cpp  file_header_docs_test.cpp  fixed_bit_set_test.cpp  fixed_string_test.cpp  fixed_vector_test.cpp  flags_test.cpp  foundation_aliases_test.cpp  function_test.cpp  handle_test.cpp  hash_customization_test.cpp  hash_map_test.cpp  hash_set_test.cpp  hash_test.cpp  id_test.cpp  inline_buffer_test.cpp  inline_storage_test.cpp  (+38 more)
